force-app/src/objects/CTCM__AuditFileSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CTCM__AccountCountryAPI__c</fullName>
        <defaultValue>&apos;c2g__Account__r.c2g__CODAECCountryCode__c&apos;</defaultValue>
        <inlineHelpText>Default value = c2g__Account__r.c2g__CODAECCountryCode__c</inlineHelpText>
        <label>Account Country API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__AccountCountryFilterEstland__c</fullName>
        <label>Obsolete</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__AccountRegistrationNumberAPI__c</fullName>
        <defaultValue>&apos;c2g__Account__r.c2g__CODAVATRegistrationNumber__c&apos;</defaultValue>
        <inlineHelpText>Registration Number API name</inlineHelpText>
        <label>Account Registration Number API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__AccountVATRegistrationNumberAPI__c</fullName>
        <defaultValue>&apos;c2g__Account__r.c2g__CODAVATRegistrationNumber__c&apos;</defaultValue>
        <inlineHelpText>Default value: c2g__Account__r.c2g__CODAVATRegistrationNumber__c</inlineHelpText>
        <label>Account VAT Registration Number API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__CompanyRegistrationNumber__c</fullName>
        <defaultValue>&apos;c2g__VATRegistrationNumber__c&apos;</defaultValue>
        <inlineHelpText>The registration number API name on the FFA (c2g) Company. 
Default value = c2g__VATRegistrationNumber__c</inlineHelpText>
        <label>Company Registration Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__PayableInvoiceNumberAPI__c</fullName>
        <defaultValue>&apos;c2g__VendorDocumentNumber__c&apos;</defaultValue>
        <label>Payable Invoice Number API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__SalesInvoiceNumberAPI__c</fullName>
        <defaultValue>&apos;c2g__DocumentNumber__c&apos;</defaultValue>
        <inlineHelpText>related to the transaction object</inlineHelpText>
        <label>Sales Invoice Number API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__TaxCodeNameAPI__c</fullName>
        <defaultValue>&apos;c2g__TaxCode1__r.c2g__ExternalId__c&apos;</defaultValue>
        <label>TaxCodeNameAPI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lithuanian Audit File Settings</label>
</CustomObject>